force-app/main/default/objects/Form_Page__c.object
<CustomObject>
    <fields>
        <fullName>API_Name__c</fullName>
        <externalId>true</externalId>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Page</label>
        <referenceTo>Form_Page__c</referenceTo>
        <relationshipLabel>Form Pages</relationshipLabel>
        <relationshipName>Form_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Form Page</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>API_Name__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Label__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>